style: fixed network modal z-index

--- a/components/AgreementList/AgreementList.module.scss
+++ b/components/AgreementList/AgreementList.module.scss
@@ -217,6 +217,7 @@ AGREEMENT LIST
   right: 0;
   width: 100%;
   padding: 0 25px;
+  z-index: 0;
 
   input {
     display: inline-block;
